--- a/ProjectB/past.html
+++ b/ProjectB/past.html
@@ -14,14 +14,20 @@
   
 </head>
 <body>
-    <!-- <div class="introVideo">
-        <video width="70%" height="60%" autoplay ="autoplay" >
-            <source  src="RealLife.mov">
+    <div class="video-container1">
+        <video width="70%" height="60%" autoplay ="autoplay" loop>
+            <source  src="pastvideo1.mov">
         </video>
-    </div> -->
-    <div class="pastBackground">
-        <img src ="pasthtmlbackgroundpic.png" >
     </div>
+    <div class="video-container2">
+        <video width="70%" height="60%" autoplay ="autoplay" loop >
+            <source  src="pastvideo2.mov">
+        </video>
+    </div>
+    <div class="Backgroundimage-container">
+        <img src="pastbackgroundnew.png" class="pastBackground">
+    </div>
+   
 </body>
 <script src="pastclicker.js"></script>
 </html>
