--- a/ProjectB/past.html
+++ b/ProjectB/past.html
@@ -4,13 +4,10 @@
     
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Past</title>
+  <title>PastLife</title>
   <link rel="stylesheet" href="/past.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.min.js"></script>
-  
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Darumadrop+One&family=Indie+Flower&family=Open+Sans:wght@300&display=swap');
-      </style>
+ 
   
 </head>
 <body>
@@ -26,7 +23,11 @@
     </div>
     <div class="Backgroundimage-container">
         <img src="pastbackgroundnew.png" class="pastBackground">
-    </div>
+    </div>x
+    <div class="NextPage">
+        <a href="present.html" class="Presenthtml" alt="PH"></a>
+        <a href="intofuture.html" class="intofuturehtml" alt="PH"></a>
+      </div>
    
 </body>
 <script src="pastclicker.js"></script>
