--- a/ProjectB/present.html
+++ b/ProjectB/present.html
@@ -4,7 +4,7 @@
     
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Real Life</title>
+  <title>PresentLife</title>
   <link rel="stylesheet" href="/present.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.min.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/dixonandmoe/rellax@master/rellax.min.js"></script>
@@ -28,6 +28,7 @@
     </div> -->
     <div class="NextPage">
         <a href="past.html" class="Pasthtml" alt="PH"></a>
+        <a href="intofuture.html" class="intofuturehtml" alt="PH"></a>
       </div>
 
     
