--- a/ProjectB/past.html
+++ b/ProjectB/past.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>PastLife</title>
-  <link rel="stylesheet" href="/past.css">
+  <link rel="stylesheet" type="text/css" href="past.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.min.js"></script>
   
   
@@ -23,7 +23,7 @@
     </div>
     <div class="Backgroundimage-container">
         <img src="pastbackgroundnew.png" class="pastBackground">
-    </div>x
+    </div>
     <div class="NextPage">
         <a href="present.html" class="Presenthtml" alt="PH"></a>
         <a href="intofuture.html" class="intofuturehtml" alt="PH"></a>
