--- a/ProjectB/present.html
+++ b/ProjectB/present.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>PresentLife</title>
-  <link rel="stylesheet" href="/present.css">
+  <link rel="stylesheet" href="present.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.min.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/dixonandmoe/rellax@master/rellax.min.js"></script>
   <embed src="presentaudio.MP3" hidden="flase" autostart="true" loop="true">
