past and future music add

--- a/ProjectB/last.html
+++ b/ProjectB/last.html
@@ -6,6 +6,7 @@
   <title>My Real Life</title>
   <link rel="stylesheet"  href="last.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.min.js"></script>
+  <embed src="last.MP3" hidden="flase" autostart="true" loop="true">
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Indie+Flower&family=Rubik+Pixels&display=swap');
 
