--- a/ProjectB/past.html
+++ b/ProjectB/past.html
@@ -7,7 +7,7 @@
   <title>PastLife</title>
   <link rel="stylesheet" type="text/css" href="past.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.min.js"></script>
-  
+  <embed src="pastAudio.MP3" hidden="flase" autostart="true" loop="true">
   
 </head>
 <body>
@@ -24,10 +24,13 @@
     <div class="Backgroundimage-container">
         <img src="pastbackgroundnew.png" class="pastBackground">
     </div>
-    <div class="NextPage">
+    <div class="sticker">
+        <img src="btn-backtopresent.png">
+    </div>
+    <!-- <div class="NextPage">
         <a href="present.html" class="Presenthtml" alt="PH"></a>
         <a href="intofuture.html" class="intofuturehtml" alt="PH"></a>
-      </div>
+      </div> -->
    
 </body>
 <script src="pastclicker.js"></script>
